--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
+    "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
     "sass-embedded": "^1.83.0",
